src/tests/environment/snapshots/monkey_interpreter__tests__environment__test_environment_call_error_case_1_1_environment.snap
---
source: src/tests/environment/mod.rs
expression: evaluator
---
Evaluator {
    environment: Environment {
        variables: {
            "divide": Function {
                parameters: [
                    "x",
                ],
                block: Block {
                    nodes: [
                        Expression {
                            expression: Infix {
                                left_hand: Identifier {
                                    identifier: "x",
                                },
                                operator: Divide,
                                right_hand: Integer {
                                    literal: 0,
                                },
                            },
                        },
                    ],
                },
            },
        },
        sub_environment: None,
    },
}
