src/tests/environment/snapshots/monkey_interpreter__tests__environment__test_environment_call_error_case_1_2_evaluation_error.snap
---
source: src/tests/environment/mod.rs
expression: error
---
Err(
    "Division by zero, cannot apply the / infix operator to a right hand operand of 0.",
)
