src/tests/environment/snapshots/monkey_interpreter__tests__environment__test_environment_call_error_case_2_1_environment.snap
---
source: src/tests/environment/mod.rs
expression: evaluator
---
Evaluator {
    environment: Environment {
        variables: {
            "identity": Function {
                parameters: [
                    "x",
                ],
                block: Block {
                    nodes: [
                        Expression {
                            expression: Identifier {
                                identifier: "x",
                            },
                        },
                    ],
                },
            },
        },
        sub_environment: None,
    },
}
