src/tests/environment/snapshots/monkey_interpreter__tests__environment__test_environment_case_1_1_environment.snap
---
source: src/tests/environment/mod.rs
expression: evaluator
---
Evaluator {
    environment: Environment {
        current: Scope {
            variables: {
                "a": Integer {
                    value: 25,
                },
                "b": Integer {
                    value: 91,
                },
            },
            enclosing: None,
        },
    },
}
